add build files

--- a/src/components/pages/SinglePages/SinglePages.module.scss
+++ b/src/components/pages/SinglePages/SinglePages.module.scss
@@ -9,7 +9,7 @@
 
 .centeredInput {
     text-align: center;
-    width: 100px;
+    width: 10px;
 }
 
 .labelCol {
@@ -22,5 +22,5 @@
 }
 
 .inputCol {
-    width: 50px;
+    width: 30%;
 }
